--- a/style.css
+++ b/style.css
@@ -1,5 +1,55 @@
-*::after, *::before*{
+*::after,
+*::before,
+* {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+nav {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    justify-content: space-between;
+    background-color: chartreuse;
+    align-items: center;
+}
+
+nav>*:nth-child(2) {
+    display: grid;
+    justify-content: end;
+}
+
+.logo {
+    padding-left: 1em;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.nav {
+    align-self: end;
+    display: inline-flex;
+    list-style: none;
+}
+
+.nav>* {
+    padding: 1em;
+}
+
+
+/* Hero Section */
+
+.heroSec {
+    position: relative;
+}
+
+.overlay {
+    position: absolute;
+    background-color: black;
+    height: 20px;
+}
+
+.heroSec img {
+    /* object-fit: contain; */
+    width: 100vw;
+    height: 45vw;
 }
